Fix footer top-to-bottom alignment
Footer text is now centered properly top to bottom.

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ form > fieldset {
 footer {
   font-family: 'gidoleregular', Arial, Helvetica, sans-serif;
   font-size: 1rem;
-  padding: .8rem; 
+  padding: .5rem; 
   height: 2rem;
   text-align: center;
   text-wrap: nowrap;
